# MediGuard-Multi-Agent

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/gold_set/: README.md
data/gold_set/documents/: doc_001.txt  doc_002.txt  doc_003.txt  doc_004.txt  doc_005.txt
data/gold_set/labels/: doc_001.labels.json  doc_002.labels.json  doc_003.labels.json  doc_004.labels.json  doc_005.labels.json
docs/: cicd_setup.md  compliance_frameworks.md  data_retention.md  llm_configuration.md  metrics_specification.md  outputs_specification.md  phi_handling_standard.md  scope_specification.md  stack_and_layout.md  threat_model.md
src/scripts/: eval_gold_set.py
tests/: conftest.py
tests/unit/: test_gold_set_validation.py
